fix: remove overflow hidden

--- a/frontend/react/src/index.css
+++ b/frontend/react/src/index.css
@@ -10,7 +10,6 @@
 @layer base {
   :root {
     background-color: var(--main);
-    overflow: hidden;
   }
 
   main {
